www/css/galeria.css
.filaGaleria{
	width: 500% ;
	height: 160px;
	/*background-color: blue;*/
	overflow-y:hidden;
	overflow-x: scroll;
	margin-top: 10px;
	position: relative
}
.galeriaThumbImg{
	width:150px;
	height:150px;
	background-color:red;
	position: relative;
	float:left;
	margin:5px;
}
.galeriaThumbImg img{
	width: 100%;
	height: 100%;
}
.galeriaGreenTitle{
	display: block;
	background-color: #73a732;
	width: 100%;
	height: 50px;
	position: relative;
	float:left;
	margin-top: -50px;
	color: white;
	line-height: 50px;
	font-size: 18px;
}
.galeriaGreenTitleNot{
	display: none;	
}
.largeImg{
	width: 90%;
	height: 85%;
	border-style: solid;
	border-width:5px;
	border-color: white;
	position: absolute;
	/* z-index: 100; */
	top: 90px;
	left: 5%;
}
.largeImg img{
	width: 100%;
	height: 100%;
}


.moveLeft{
  -moz-animation: 2s firstAnimation;
  -o-animation: 2s firstAnimation;
  -webkit-animation: 2s firstAnimation;
  animation: 2s firstAnimation;
}

@keyframes firstAnimation {
  0% {
    left: 0px
  }
  100% {
    left: -50px
  }
}
/* For Chrome and Safari */
@-webkit-keyframes firstAnimation {
  /* from is equivalent to 0% */
  from {
     left: 0px
  }
  /* from is equivalent to 100% */
  to {
    left: -50px
  }
}
/* iphone 5 */
@media screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) {
	.filaGaleria{height: 110px;}
	.galeriaThumbImg{ width: 90px;height: 90px; }
	.galeriaGreenTitle{ height: 30px;margin-top: -30px;line-height: 30px;font-size: 12px; }
}

/* iphone 4 */
@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait){
	.filaGaleria{height: 110px;}
	.galeriaThumbImg{ width: 90px;height: 90px; }
	.galeriaGreenTitle{ height: 30px;margin-top: -30px;line-height: 30px;font-size: 12px; }
}

